--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.3.RELEASE</version>
+        <groupId>com.jpmorgan.ib.caonpd</groupId>
+        <artifactId>cakeshop</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.jpmorgan.ib.caonpd</groupId>
