--- a/cakeshop-client-java/pom.xml
+++ b/cakeshop-client-java/pom.xml
@@ -18,6 +18,7 @@
         <swagger.core.version>1.5.8</swagger.core.version>
         <feign.version>8.1.1</feign.version>
         <oltu.version>1.0.0</oltu.version>
+        <handlebars.version>1.3.2</handlebars.version>
     </properties>
 
     <dependencies>
@@ -83,13 +84,24 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
-            <type>jar</type>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <type>jar</type>
+        </dependency>
+
+        <!-- Generator deps -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
         </dependency>
 
         <!-- ############################################# -->
