--- a/cakeshop-abi/pom.xml
+++ b/cakeshop-abi/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.jpmorgan.ib.caonpd</groupId>
         <artifactId>cakeshop-parent</artifactId>
-        <version>${build.version}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>cakeshop-abi</artifactId>
