--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.jpmorgan.ib.caonpd</groupId>
         <artifactId>cakeshop-parent</artifactId>
-        <version>${build.version}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>cakeshop</artifactId>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.jpmorgan.ib.caonpd</groupId>
             <artifactId>cakeshop-abi</artifactId>
-            <version>${build.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- SPRING & SPRING BOOT -->
