--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.jpmorgan.ib.caonpd</groupId>
     <artifactId>cakeshop-parent</artifactId>
-    <version>${build.version}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>cakeshop</name>
@@ -21,8 +21,6 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.7</java.version>
-
-        <build.version>1.0-SNAPSHOT</build.version>
     </properties>
 
     <distributionManagement>
@@ -46,6 +44,11 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.1</version>
+            </plugin>
         </plugins>
     </build>
 
