--- a/cakeshop-client-java-codegen/pom.xml
+++ b/cakeshop-client-java-codegen/pom.xml
@@ -42,6 +42,12 @@
         <!-- utils -->
 
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
@@ -62,7 +68,6 @@
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
 
-        <!-- Generator deps -->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
@@ -112,6 +117,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
+                        <forced />
                         <manifest>
                             <mainClass>com.jpmorgan.ib.caonpd.cakeshop.client.Generator</mainClass>
                         </manifest>
@@ -122,21 +128,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <!-- <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.jpmorgan.ib.caonpd.cakeshop.client.Generator</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration> -->
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
