--- a/cakeshop-client-java-codegen/pom.xml
+++ b/cakeshop-client-java-codegen/pom.xml
@@ -42,6 +42,12 @@
         <!-- utils -->
 
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
