--- a/cakeshop-api/src/main/resources/application.properties
+++ b/cakeshop-api/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
