--- a/cakeshop-api/src/main/resources/local/env.properties
+++ b/cakeshop-api/src/main/resources/local/env.properties
@@ -14,6 +14,7 @@ geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
 geth.cors.enabled=false
 contract.poll.delay.millis=5000
 geth.db.enabled=true
+geth.params.extra=--jpmtest
 
 # spring boot actuator
 management.context-path=/manage
