--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <module>cakeshop-abi</module>
         <module>cakeshop-client-java</module>
         <module>cakeshop-client-java-codegen</module>
+        <module>cakeshop-client-java-sample</module>
         <module>cakeshop-client-js</module>
     </modules>
 
