--- a/cakeshop-api/src/main/resources/log4j.properties
+++ b/cakeshop-api/src/main/resources/log4j.properties
@@ -25,7 +25,7 @@ log4j.appender.accesslog.layout.ConversionPattern=%5p %d %m%n
 
 # FILE
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${logging.path}/logs/meth.log
+log4j.appender.R.File=${logging.path}/cakeshop.log
 
 log4j.appender.R.MaxFileSize=10000KB
 log4j.appender.R.MaxBackupIndex=1
