--- a/cakeshop-api/src/main/resources/log4j.properties
+++ b/cakeshop-api/src/main/resources/log4j.properties
@@ -1,17 +1,35 @@
 
-log4j.rootLogger=WARN, stdout, R
+###########
+# LOGGERS #
+###########
 
+log4j.rootLogger=WARN, stdout, cakeshop
+
+# geth
+log4j.category.geth=DEBUG, geth-stdout, cakeshop, geth
+log4j.additivity.geth=false
+
+# access logs
 log4j.category.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=INFO, accesslog
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=false
 
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout
+# cakeshop.*
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop=INFO, stdout, cakeshop
+log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop=false
+
+# these next few are quite spammy, control them seperately
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout, cakeshop
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=false
 
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=INFO, stdout
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=INFO, stdout, cakeshop
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=false
 
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=INFO, stdout
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=INFO, stdout, cakeshop
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=false
+
+#############
+# APPENDERS #
+#############
 
 # STDOUT
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -23,12 +41,22 @@ log4j.appender.accesslog=org.apache.log4j.ConsoleAppender
 log4j.appender.accesslog.layout=org.apache.log4j.PatternLayout
 log4j.appender.accesslog.layout.ConversionPattern=%5p %d %m%n
 
-# FILE
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${logging.path}/cakeshop.log
+# CAKESHOP
+log4j.appender.cakeshop=org.apache.log4j.RollingFileAppender
+log4j.appender.cakeshop.File=${logging.path}/cakeshop.log
+log4j.appender.cakeshop.MaxFileSize=10000KB
+log4j.appender.cakeshop.MaxBackupIndex=7
+log4j.appender.cakeshop.layout=org.apache.log4j.PatternLayout
+log4j.appender.cakeshop.layout.ConversionPattern=%5p %d [%t] %c - %m%n
 
-log4j.appender.R.MaxFileSize=10000KB
-log4j.appender.R.MaxBackupIndex=1
+# GETH (FILE & STDOUT)
+log4j.appender.geth=org.apache.log4j.RollingFileAppender
+log4j.appender.geth.File=${logging.path}/geth.log
+log4j.appender.geth.MaxFileSize=10000KB
+log4j.appender.geth.MaxBackupIndex=7
+log4j.appender.geth.layout=org.apache.log4j.PatternLayout
+log4j.appender.geth.layout.ConversionPattern=%m%n
 
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %d %t %c - %m%n
+log4j.appender.geth-stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.geth-stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.geth-stdout.layout.ConversionPattern=%m%n
