--- a/cakeshop-api/src/main/resources/prod/env.properties
+++ b/cakeshop-api/src/main/resources/prod/env.properties
@@ -18,3 +18,7 @@ geth.db.enabled=false
 # spring boot actuator
 management.context-path=/manage
 endpoints.actuator.enabled=true
+
+cakeshop.mvc.async.pool.threads.core=250
+cakeshop.mvc.async.pool.threads.max=1000
+cakeshop.mvc.async.pool.queue.max=10000
