--- a/cakeshop-api/src/main/webapp/package.json
+++ b/cakeshop-api/src/main/webapp/package.json
@@ -13,5 +13,19 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "backbone": "^1.3.3",
+    "bluebird": "^3.4.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-tour": "^0.11.0",
+    "d3": "^4.2.1",
+    "epoch-charting": "^0.8.4",
+    "jquery": "^2.1.3",
+    "jquery-slimscroll": "^1.3.8",
+    "jquery-ui": "^1.12.0",
+    "moment": "^2.14.1",
+    "sockjs-client": "^1.1.1",
+    "underscore": "^1.8.3"
   }
 }
