--- a/cakeshop-api/src/main/webapp/package.json
+++ b/cakeshop-api/src/main/webapp/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-tour": "^0.11.0",
     "d3": "^4.2.1",
+    "draggabilly": "^2.1.1",
     "epoch-charting": "^0.8.4",
     "jquery": "^2.1.3",
     "jquery-slimscroll": "^1.3.8",
