--- a/cakeshop-api/src/main/resources/log4j.properties
+++ b/cakeshop-api/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@
 # LOGGERS #
 ###########
 
-log4j.rootLogger=WARN, stdout, cakeshop
+log4j.rootLogger=DEBUG, stdout, cakeshop
 
 # geth
 log4j.category.geth=DEBUG, geth-stdout, cakeshop, geth
