--- a/cakeshop-api/src/main/resources/config/application-dev.properties
+++ b/cakeshop-api/src/main/resources/config/application-dev.properties
@@ -26,9 +26,7 @@ cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 #db config
-cakeshop.database.vendor=oracle
-cakeshop.jndi.name=jdbc/oracle_blkchain
-#cakeshop.database.vendor=hsqldb
+cakeshop.database.vendor=hsqldb
 #cakeshop.jdbc.pass=
 #cakeshop.jdbc.user=
 #cakeshop.jdbc.url=
